--- a/template.html
+++ b/template.html
@@ -2391,7 +2391,7 @@ body {
             <h1 class="hero-title">⛏️ Minecraft Stats EPIC</h1>
             <p class="hero-subtitle">🚀 Panel Ultra Premium de Estadísticas Avanzadas 🎮</p>
             <p class="hero-timestamp">Actualizado: {UPDATE_TIME}</p>
-            <a href="https://github.com/{GITHUB_USER}/{GITHUB_REPO}/actions/workflows/update-stats.yml" target="_blank" class="update-button">
+            <a href="https://github.com/statsmc/mcstats/actions/workflows/update-stats.yml" target="_blank" class="update-button">
                 <i class="fas fa-sync-alt"></i>
                 <span>Actualizar Stats</span>
             </a>
